<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
	android:layout_height="match_parent" >

    <TextView
        android:id="@+id/das_k"
        android:textSize="25sp"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_k"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#FFFF00" />

    <TextView
        android:id="@+id/das_s"
        android:textSize="25sp"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_s"
        android:layout_below="@id/das_k"
        android:layout_toLeftOf="@id/das_k"
              android:background="#80DD0000" />

    <TextView
        android:id="@+id/das_c"
        android:textSize="25sp"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_c"
        android:layout_below="@id/das_s"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@id/das_s"
        android:background="#FFFF00" />

    <TextView
        android:background="#00FFFF"
        android:text="@string/label_ole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/das_c"
        android:layout_alignLeft="@id/das_s"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>