<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--
          Kante an Geschwister-Element ausrichten:
            android:layout_alignLeft
            android:layout_alignRight
            android:layout_alignTop
            android:layout_alignBottom

          Als Wert des Attributs muss ein Geschwister-Element anhand seiner
          ID referenziert werden.
    -->

    <TextView
        android:id="@+id/textview_1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="#80D0D000"
        android:text="@string/label_textview_1"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/textview_2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/textview_1"
        android:layout_below="@id/textview_1"
        android:background="#8000D000"
        android:text="@string/label_textview_2"
        android:textSize="25sp"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/textview_2"
        android:layout_alignLeft="@id/textview_1"
        android:layout_alignRight="@id/textview_2"
        android:background="#80FFFF00"
        android:text="@string/label_textview_3"
        android:textSize="25sp"/>

</RelativeLayout>